--- a/css/app.css
+++ b/css/app.css
@@ -19,13 +19,20 @@ h1 {
 .image {
   text-align: center;
   margin: 20px;
-  font-size: 40px;
+  font-size: 20px;
+  margin-bottom: 20px;
+  margin-top: 30px;
 }
 
-.live {
+#smile {
+  background-color: grey;
   text-align: center;
-  margin: 20px;
   font-size: 40px;
+  margin-bottom: 20px;
+}
+
+#live {
+  font-size: 30px;
 }
 
 .options button {
@@ -37,10 +44,6 @@ h1 {
   border: none;
   border-radius: 5px;
   cursor: pointer;
-}
-
-.game-info {
-  background-color: lightblue;
 }
 
 .options button:hover {
@@ -58,7 +61,8 @@ h1 {
   border: 5px solid #ddd;
   cursor: pointer;
   text-align: center;
-  background-color: #3ea2e0
+  background-color: #3ea2e0;
+  font-size: 25px;
 }
 
 .cell:hover {
@@ -71,5 +75,6 @@ h1 {
   font-weight: bold;
   color: #333;
   margin-top: 2%;
+  background-color: lightblue
 
 }
